# gdhi_adj

./: .flake8  .gitignore  .jenkinsfile  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  index.html  main.py  mkdocs.yaml  objects.inv  requirements.txt  run_coverage.py  runlog.py  setup.cfg
.github/: CODEOWNERS
.github/workflows/: deploy_mkdocs.yaml  pull_request_workflow.yaml
config/: config.toml  dev_config.toml  input_adj_schema.toml  input_constrained_schema.toml  input_gdhi_schema.toml  input_ra_lad_schema.toml  input_schema.toml  output_adjustment_schema.toml  output_preprocess_schema.toml  output_schema.toml  schema_config.toml  user_config.toml
config/schemas/: input_lau_lad_schema.toml  lau_lad_schema.toml  output_cord_prep_schema.toml
dev_utils/pre-commit_helpers/: check_toml.py  detect_private_key.py  name_tests_test.py  python_type_check.py
docs/: Git-Workflow.rst  Unit-Testing.rst  Versioning-and-Releases.rst  _sidebar.rst  index.md  reference.md
docs/source/: Main-Modules.rst  conf.py
dummy_data/: dummydata.csv
dummy_data/output/: agg_data.csv
gdhi_adj/: adjustment.py  pipeline.py  preprocess.py
gdhi_adj/adjustment/: apportion_adjustment.py  calc_adjustment.py  (+4 more)
rap_project_example/: cleanliness_checks.py  config.py  output.py  pipeline.py  preprocess.py  test_function_agg.py
reference/: index.html
search/: search_index.json
tests/: conftest.py  test_adjustment.py  test_chispa.py  test_example.py  test_helpers.py  test_preprocess.py  test_pytest_mock.py  test_read_toml.py  test_remove_nan_rows.py
(+28 files in other folders)
