[metadata]
name = gdhi-adj
version = attr: gdhi_adj.__version__
author = Reproducible Data Science & Analysis, ONS
author_email = RDSA.Support@ons.gov.uk
description = Flags outliers of GDHI data at LSOA levels and adjusts the outlier values.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ONSdigital/gdhi_adj
classifiers =
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.12, <3.14
include_package_data = True
install_requires =
    flake8>=7.1.1
    numpy==1.26.4
    pandas==2.3.0
    openpyxl == 3.1.5
    pip
    pre-commit==2.17.0
    pyarrow
    pytest==8.3.2
    pytest-cov==7.0.0
    python-dotenv
    pyyaml
    readme-coverage-badger
    requests
    setuptools
    scipy
    toml
    tomli==2.0.1

[options.packages.find]
where = .
include = gdhi_adj*
